--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ nav a:hover {
 
 /* Home start */
 .home {
-    background: url("../media/background_img.png") no-repeat center center/cover;
+    background: url("https://A1348089.github.io/demo_portfolio/media/background_img.png") no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
